--- a/Visma.css
+++ b/Visma.css
@@ -1,30 +1,45 @@
-
-/* Add some styling for the webpage */
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-}
-
-h1 {
-    font-size: 2em;
-    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #F8F9FA;
 }
 
 #app {
-    margin: 20px;
+    margin-top: 50px;
 }
 
-/* Style for the buttons */
+h1 {
+    text-align: center;
+    color: #17A2B8;
+}
+
 .button {
-    background-color: #4CAF50;
+    background-color: #28A745;
     color: white;
-    padding: 14px 20px;
-    margin: 8px;
     border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-size: 18px;
     cursor: pointer;
-    width: 200px;
+    box-shadow: 2px 2px #A9A9A9;
+    position: relative;
 }
 
-.button:hover {
-    background-color: #3e8e41;
+.button:hover::after {
+    content: attr(data-uri);
+    position: fixed; /* change position to fixed */
+    top: 50%;
+    left: 50%; /* center horizontally */
+    transform: translate(-50%, 10%); /* center vertically and position lower on the page */
+    background-color: #28A745;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+    font-size: 14px;
+    text-align: center;
 }
+
+
