--- a/Visma.css
+++ b/Visma.css
@@ -2,7 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #F8F9FA;
+    background-color: #D7E9B9; /* adjust background color */
+    color: #FAAB78; /* adjust text color */
 }
 
 #app {
@@ -11,11 +12,26 @@ body {
 
 h1 {
     text-align: center;
-    color: #17A2B8;
+    color: #FAAB78;
+    background-color: #FFFBAC;
+    padding: 10px 20px;
+    border-radius: 5px;
 }
 
 .button {
-    background-color: #28A745;
+    background-color: #FFD495; /* adjust button background color */
+    color: #FAAB78;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 2px 2px #9E9E9E;
+    position: relative;
+}
+.buttonWithout{
+    background-color: #FFD495;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -23,17 +39,18 @@ h1 {
     margin-top: 20px;
     font-size: 18px;
     cursor: pointer;
-    box-shadow: 2px 2px #A9A9A9;
+    box-shadow: 2px 2px #9E9E9E;
     position: relative;
 }
 
 .button:hover::after {
     content: attr(data-uri);
+    color: white;
     position: fixed; /* change position to fixed */
-    top: 50%;
+    top: 46%;
     left: 50%; /* center horizontally */
     transform: translate(-50%, 10%); /* center vertically and position lower on the page */
-    background-color: #28A745;
+    background-color: #FAAB78;
     color: white;
     padding: 5px;
     border-radius: 5px;
@@ -41,5 +58,28 @@ h1 {
     font-size: 14px;
     text-align: center;
 }
-
-
+.description {
+    font-size: 1.2em;
+    padding: 10px;
+    text-align: center;
+    color: #FAAB78;
+    }
+    .description p {
+        font-size: 0.9em;
+    }
+    
+    h2 {
+    font-family: 'Montserrat', sans-serif;
+    color: #FAAB78;
+    text-align: center;
+    padding-bottom: 10px;
+    }
+    .footer {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        background: linear-gradient(to right, #FFFBAC, #FFFBAC);
+        color: white; /* adjust footer text color */
+        padding: 20px;
+        text-align: center;
+    }
