--- a/Visma.css
+++ b/Visma.css
@@ -32,7 +32,7 @@ h1 {
 }
 .buttonWithout{
     background-color: #FFD495;
-    color: white;
+    color: #FAAB78;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
